--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,16 +1,18 @@
-version: "2.2"
+version: "3.7"
 services:
   es:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.4.0
     container_name: tyollisyyspalvelut_es
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false
     ports:
       - 9200:9200
       - 9300:9300
     networks:
       - internal
       - stonehenge-network
+
 
 networks:
   elastic:
